examples/diagnostics_demos/errors/invalid_pattern_error.flx
// Triggers E034 (INVALID PATTERN): catch-all not last.
let x = match 1 {
    _ -> 1,
    1 -> 2,
};
print(x);
